Revert "Revert "Add and port the BT HCI SMD driver""
This reverts commit 803f2540034a9005c19bc403b4ca097687476826.

--- a/arch/arm64/configs/lineageos_oneplus3_defconfig
+++ b/arch/arm64/configs/lineageos_oneplus3_defconfig
@@ -749,6 +749,7 @@ CONFIG_CRYPTO_MD4=y
 CONFIG_CRYPTO_ANSI_CPRNG=y
 CONFIG_CRC_ITU_T=y
 CONFIG_OID_REGISTRY=y
+CONFIG_BT_HCISMD=y
 
 # SFOS old kernel and other arch options v7
 # ...
